objects/MarketingFlyerLead__c.object
<CustomObject>
    <fields>
        <fullName>AdditionalDetails__c</fullName>
        <label>Additional Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MarketingFlyer__c</fullName>
        <label>Marketing Flyer</label>
        <referenceTo>MarketingFlyer__c</referenceTo>
        <relationshipLabel>Marketing Flyer Leads</relationshipLabel>
        <relationshipName>Marketing_Flyer_Leads</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Query__c</fullName>
        <label>Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Marketing Flyer Lead</label>
    <nameField>
        <displayFormat>Lead-{000}</displayFormat>
        <label>Marketing Flyer Lead Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Flyer Leads</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>